--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  height: 100%;
-  width: 100%;
+ 
   background: #212121;
 }
 
@@ -45,8 +41,9 @@ body {
 
 .main{
   background: blue;
+  margin-left:auto;
+  margin-right:auto;
 }
-
 .test{
   background:darkslategray;
   height: 700px;
@@ -54,8 +51,7 @@ body {
 
 .red-bg{
   background-color: red;
-  height: 100%;
-  width: 100%;
+  
 }
 
 .blue-bg {
