--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,14 @@ textarea{
   right:10px;
   top:10px;
 }
+
+
+.padded-grid{
+  padding: 2% !important;
+}
+
+.widget-container{
+  background: #424242 !important;
+  margin-top: 10px;
+  padding: 10px;
+}
